# RDT

./: .gitignore  LICENSE  ML_CHECKLIST.md  MODEL_CARD.md  README.md  environment.yml  generate_source_data.py  pyproject.toml  requirements.txt
analysis/: README.md  bootstrap_noise_ci.py  compute_feature_survival.py  compute_feature_survival_tg.py  granger_causality_onset.py  granger_causality_superclass.py  granger_causality_tg.py  granger_causality_tg_critical.py  predict_terminal_accuracy.py  validate_manuscript.py
data/: DATA_README.md  causal_intervention_summary.json  consolidated_findings.json  cumulative_scaffold_census.json  curriculum_switch_summary.json  developmental_persistence.json  feature_survival_3cohort_perlayer.json  feature_survival_all_lanes.json  feature_survival_tg_expanded.json  granger_causality_onset_results.json  granger_causality_results.json  granger_causality_tg_critical_results.json  granger_causality_tg_results.json  pathway_analysis_summary.json  pipeline_verification_results.json  predict_scatter_cache.json  predict_terminal_accuracy_results.json  scaffold_predicts_superclass_accuracy.json  summary_statistics.md  superclass_epoch_metrics.json  superclass_sae_analysis_summary.json  superclass_transition_series.json  superclass_transition_series_tiny_imagenet.json  targeted_label_noise_summary.json  targeted_label_noise_summary_5seeds.json
demo/: README.md  demo_sae_analysis.py
experiments/: README.md  run_independent_init_sae.py  run_resnet18_seed137_label_noise.py  run_resnet18_seed42_curriculum.py  run_resnet18_seed42_imagenet.py  (+5 more)
(+82 files in other folders)
